--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "0.29.0",
     "@mantine/carousel": "^7.3.2",
     "@mantine/code-highlight": "^7.3.2",
     "@mantine/core": "^7.3.2",
@@ -53,11 +54,15 @@
     "compressorjs": "^1.2.1",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0-rc17",
+    "expo-linking": "^6.3.1",
+    "expo-modules-core": "^1.12.11",
+    "expo-status-bar": "^1.12.1",
     "next": "14.0.1",
     "p-map": "^7.0.1",
     "pretty-bytes": "^6.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
